Update doc & refactoring